--- a/designer/DatenbankEditTalent.ui
+++ b/designer/DatenbankEditTalent.ui
@@ -121,20 +121,6 @@
          </item>
         </layout>
        </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="labelVariable">
-         <property name="text">
-          <string>Variable Kosten</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QCheckBox" name="checkVariable">
-         <property name="text">
-          <string>Kosten sind durch Nutzer änderbar</string>
-         </property>
-        </widget>
-       </item>
        <item row="3" column="0">
         <widget class="QLabel" name="labelKommentar">
          <property name="text">
@@ -169,17 +155,17 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
+       <item row="6" column="0">
         <widget class="QLabel" name="labelFertigkeiten">
          <property name="text">
           <string>Fertigkeiten</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="6" column="1">
         <widget class="QLineEdit" name="leFertigkeiten"/>
        </item>
-       <item row="6" column="0">
+       <item row="7" column="0">
         <widget class="QLabel" name="labelVoraussetzungen">
          <property name="minimumSize">
           <size>
@@ -192,7 +178,7 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="7" column="1">
         <widget class="QPlainTextEdit" name="teVoraussetzungen">
          <property name="maximumSize">
           <size>
@@ -205,14 +191,14 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="8" column="0">
         <widget class="QLabel" name="labelBeschreibung">
          <property name="text">
           <string>Beschreibung</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="1">
+       <item row="8" column="1">
         <widget class="QTabWidget" name="tabWidget">
          <property name="currentIndex">
           <number>0</number>
@@ -318,14 +304,14 @@
          </widget>
         </widget>
        </item>
-       <item row="8" column="0">
+       <item row="9" column="0">
         <widget class="QLabel" name="labelSeite">
          <property name="text">
           <string>Seitenreferenz</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="1">
+       <item row="9" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
           <spacer name="horizontalSpacer">
@@ -354,6 +340,23 @@
           </widget>
          </item>
         </layout>
+       </item>
+       <item row="5" column="0">
+        <widget class="QLabel" name="labelSpezialisierung">
+         <property name="text">
+          <string>Erfahrungsgrad</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QCheckBox" name="checkSpezialisierung">
+         <property name="text">
+          <string>Spezialisierung möglich</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
